challenge10/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: nbacha
  labels:
    app: webdb
spec:
  replicas: 3  # Number of instances for scalability
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: bachboucha/challenge4-flask_with_db  
        ports:
        - containerPort: 5000  # Exposed port
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:  # HTTP liveness probe for webdb
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webdb  # Name of the service
spec:
  type: ClusterIP  # Service type, internal only
  selector:
    app: webdb  # Match the 'webdb' pods
  ports:
  - protocol: TCP
    port: 5000         # Port to access the service
    targetPort: 5000   # Port where the container listens
