challenge10/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: nbacha
  labels:
    app: webnodb
spec:
  replicas: 2  # Number of instances for redundancy
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: bachboucha/challenge4-flask_no_db
        ports:
        - containerPort: 5000  # Exposed port
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:  # HTTP liveness probe for webnodb
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb
  namespace: nbacha
spec:
  selector:
    app: webnodb  # Match pods with this label
  ports:
  - protocol: TCP
    port: 5000       # Service port
    targetPort: 5000 # Target container port
  type: ClusterIP
